//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk]
  name String [not null]
  hasWallet Boolean [default: false]
  wallet String
  hasAvatar Boolean
  avatar Avatar
  earnedTokens Int
  spentTokens Int
  balance Int
  playedGames Game [not null]
  recommendedGames Game [not null]
  wonRewards Reward [not null]
  ownedCollectibles Collectible [not null]
  brandSelection Brand[] [not null]
  rewardTypeSelection RewardType[] [not null]
}

Table Reward {
  id Int [pk, increment]
  title String [not null]
  subtitle String
  expiresAt DateTime
  price Int
  image String
  callToAction String
  topReward Boolean [not null, default: false]
  type RewardType
  branded Boolean
  brand Brand
  user User
  gameId Int
  game Game
  ownerId Int
}

Table Game {
  id Int [pk]
  title String [not null]
  subtitle String
  coverImage String
  smallImage String
  topGame Boolean [not null, default: false]
  type String
  subtype String
  rewards Reward [not null]
  playedBy User [not null]
  recommendedTo User [not null]
}

Table Collectible {
  id Int [pk, increment]
  name String [not null]
  description String
  type String
  is_rare Boolean
  is_an_accesory Boolean
  is_an_nft Boolean
  image String
  user User [not null]
  ownerId Int [not null]
}

Table Avatar {
  id Int [pk, increment]
  avatarLevel Int [default: 1]
  accessories Accessory [not null]
  owner User
  ownerId Int [unique]
}

Table Accessory {
  id Int [pk, increment]
  name String [not null]
  category AccessoryType
  bundle String
  image String
  equipped Boolean [not null, default: false]
  rarity String
  avatar Avatar
  avatarId Int
}

Table playedGames {
  playedgamesId Int [ref: > Game.id]
  playedbyId Int [ref: > User.id]
}

Table recommendedGames {
  recommendedgamesId Int [ref: > Game.id]
  recommendedtoId Int [ref: > User.id]
}

Enum Brand {
  Nike
  Adidas
  Amazon
  Starbucks
}

Enum RewardType {
  Fashion
  Drinks
  Sports
  Games
  Ember
  Collectible
}

Enum AccessoryType {
  HAT
  GLASSES
  MASK
  SHIRT
  PANTS
  SHOES
  ELECTRONICS
  SPORT
}

Ref: Reward.ownerId > User.id

Ref: Reward.gameId > Game.id

Ref: Collectible.ownerId > User.id

Ref: Avatar.ownerId - User.id

Ref: Accessory.avatarId > Avatar.id